At this point I'm loosing track. But let's see... - User profile mostly done (with new abstract egdes, which I'm not quite sure about) - Hashtags backend is buggy but mostly finished - MaxThoughtsOnScreen moved to graph controls - Titles visibility threshold, edge length, etc. ...

--- a/AfantazieWeb/index.html
+++ b/AfantazieWeb/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/src/style/notifications.css" />
     <link rel="stylesheet" href="/src/style/thoughtViewer.css" />
     <link rel="stylesheet" href="/src/style/graphControls.css" />
+    <link rel="stylesheet" href="/src/style/profileViewer.css" />
   </head>
   <body>
     <div id="root"></div>
