--- a/AfantazieWeb/index.html
+++ b/AfantazieWeb/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-      <meta name="description" content="Social network for graph enthusiasts." />
-    <title>Aphant DEV</title>
+    <title>Aphantasia</title>
+    <meta name="description" content="Graphity graphity" />
     
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
